--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,11 @@ title: Gallery
 permalink: /gallery/
 ---
 
+{% for photo in site.data.gallery %}
 <div class="gallery">
-  <a target="_blank" href="img_5terre.jpg">
-    <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+  <a target="_blank" href=url({{ site.baseurl }}/images/{{ photo.image }})>
+    <img src=url({{ site.baseurl }}/images/{{ photo.image }}) alt="Cinque Terre" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">{{ photo.description }}</div>
 </div>
+{% endfor %}
