--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@ permalink: /gallery/
 
 {% for photo in site.data.gallery %}
 <div class="gallery">
-  <a target="_blank" href="background: url({{ site.url }}/images/{{ photo.image }})">
+  <a target="_blank" href="{{ site.url }}/images/{{ photo.image }}">
     <img src="{{ site.url }}/images/{{ photo.image }}" alt="Cinque Terre" width="600" height="400">
   </a>
   <div class="desc">{{ photo.description }}</div>
