--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,8 @@ title: Gallery
 permalink: /gallery/
 ---
 
+<h1 class="page-heading">Gallery</h1>
+
 {% for photo in site.data.gallery %}
 <div class="gallery">
   <a target="_blank" href="{{ site.url }}/images/{{ photo.image }}">
