update career and introduction

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ layout: default
   <h1 class="page-heading">Profiles</h1>
   <div class="self-introduce">
     大阪大学大学院情報科学研究科 <a href="http://www-bigdata.ist.osaka-u.ac.jp/ja/home/">鬼塚研究室</a>の修士2年です．<br>
-    <a href="https://nlp-arase.github.io/">荒瀬由紀准教授</a>にご指導いただいております．<br>
-    雑談対話システムの研究をしており，より人間らしいユーモア溢れるチャットボットの構築を目指しております．<br>
+    <a href="https://nlp-arase.github.io/">荒瀬由紀准教授</a>にご指導いただいておりました．<br>
+    現在は株式会社ユーザーローカルでエンジニアをさせていただいております．<br>
+    雑談対話システムの研究に興味があり，より人間らしいユーモア溢れるチャットボットの構築を目指しております．<br>
     趣味：ゲーム/ギター/ラーメン巡り/料理/たまに絵描きます<br>
     Nintendo Switch: SW-4204-8682-2036<br>
     Fate Grand Order: 418,823,684<br>
