fix:テキスト選択不可

--- a/badminton.html
+++ b/badminton.html
@@ -284,6 +284,13 @@ h1::after {
   justify-content: flex-start;
 }
 
+.results-card,
+.table-container,
+.table {
+  user-select: none;
+  -webkit-user-select: none;
+}
+
 .team-label {
   background: #e8f0fe;
   color: var(--primary-color);
